--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~10.0.3",
     "@angular/compiler": "~10.0.3",
     "@angular/core": "~10.0.3",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.0.3",
     "@angular/localize": "~10.0.3",
     "@angular/platform-browser": "~10.0.3",
@@ -22,6 +23,8 @@
     "@angular/router": "~10.0.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.5.0",
+    "firebase": "^8.6.7",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.5.5",
     "sweetalert2": "^11.0.17",
     "tslib": "^2.0.0",
